# study_yaze

uifw/: CMakeLists.txt
uifw/cmake/: imgui.cmake  sdl2.cmake
uifw/src/: CMakeLists.txt
uifw/src/app/: main.cpp  rom.cc  rom.h
uifw/src/app/core/: controller.cc  controller.h  pipeline.cc  pipeline.h
uifw/src/app/editor/: assembly_editor.cc  master_editor.cc  master_editor.h  screen_editor.cc  screen_editor.h
uifw/src/app/gfx/: bitmap.cc  bitmap.h  compression.cc  snes_tile.cc  snes_tile.h
uifw/src/app/gui/: canvas.cc  canvas.h  style.cc
yaze/assets/asm/: mosaic_change.asm
yaze/docs/: windows-build.md
yaze/src/app/: rom.h
yaze/src/app/editor/: overworld_editor.cc  overworld_editor.h  palette_editor.cc  palette_editor.h
yaze/src/app/gfx/: snes_palette.cc  snes_palette.h
yaze/src/app/gui/: icons.h  style.h
yaze/src/app/zelda3/: overworld_map.cc  overworld_map.h
yaze/src/app/zelda3/screen/: inventory.cc  inventory.h  title_screen.cc
yaze/src/app/zelda3/sprite/: sprite.cc  sprite.h
yaze/src/lib/imgui/backends/: imgui_impl_sdl2.h
yaze/src/lib/sneshacking/: .travis.yml
yaze/src/lib/sneshacking/Aladdin/: patchrom.bat
yaze/src/lib/sneshacking/Lua/: Mr Nutz snes9x-bizhawk.lua  alttp colision.lua  soestuff.lua
yaze/src/lib/sneshacking/alttp/: shuffleinput.asm
yaze/src/lib/sneshacking/src/: rominfo.c  rominfo.h  testpng.c  tilepng.c  tilepng.h
yaze/src/lib/sneshacking/src/test/: CMakeLists.txt  testrominfo.c
yaze/test/: CMakeLists.txt
